1.07 - TBA
- css and jquery are now loaded locally instead of going on the internet
- disabled css options under Window menu because they're broken at the moment

1.06 - TBA
* added ”Reload CSS” which will reload the current css, useful when testing and so on
* we now remove the old css before applying the new one (default CSS-option works now)


1.05 - mar 03 2014
* external css file (Go crazy!)
* default css is loaded from my server (http://lambdan.se/splits.css)
* 1.05a: removed <center> tags. use css instead.


1.04 - mar 02 2014
* split protection (i.e. so you cant double-hit split key)
* title & attempts display (optional ofcourse)
* known bug: sometimes when opening the app, it will show 0,00000000000000… no idea why…
* *** css is now loaded from my dropbox (internet connection required, every startup)
* *** known bug: timer is not at bottom when no title/attempts are shown
*** = I was hoping to have an user editable, external CSS file for this release, but I need to learn the relative path’s for the HTML that is being used, or how to reload CSS on demand. Hoping to have this fixed in 1.05.
Figuring out how to reload (a new) CSS on demand will also fix the timer positioning bug, as I can have one margin for with title/attempts, and one for without. The best thing though, once I figure it out, is that you will be able to open up the css file and go crazy, change fonts, change colors, change sizes, change margins. everything!
Because I don’t know a lot about this right now, i’m releasing 1.04 as it is. No ETA for 1.05.


1.03 - nov 04 2013
* changed about box a little
* pressing (X) now quits the app
* removed some commented stuff
* changed credits.rtf

1.02 - nov 02 2013
* same key for start/split
* new icon
* added no decimals option
* one decimal is now default

1.01 - nov 02 2013
* set decimals (under Window>), 1 to 3
* 2 decimals is new default

1.00 - nov 01 2013
* changed hotkeys