@@ -1,6 +1,8 @@
 1.07 - TBA
+- changed hotkeys
 - css and jquery are now loaded locally instead of going on the internet
 - disabled css options under Window menu because they're broken at the moment
+- added "Open HTML Folder" where you can change all the html components (such as the css! see README.md)
 
 1.06 - TBA
 * added ”Reload CSS” which will reload the current css, useful when testing and so on
